--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -1,2 +1,8 @@
+SONARR_API_KEY: XXX
 SONARR_ANIME_API_KEY: XXX
+RADARR_API_KEY: XXX
 RADARR_ANIME_API_KEY: XXX
+SONARR_URL: http://IP:PORT
+SONARR_ANIME_URL: http://IP:PORT
+RADARR_URL: http://IP:PORT
+RADARR_ANIME_URL: http://IP:PORT
