--- a/config/config.yml
+++ b/config/config.yml
@@ -71,6 +71,7 @@ sonarr:
           - 418f50b10f1907201b6cfdf881f467b7 # Dual Audio
         assign_scores_to:
           - name: Anime HD
+          - name: Anime HD - Jap Only
             #score: 10
             #score: 101
 
@@ -79,14 +80,16 @@ sonarr:
           - 026d5aadd1a6b4e550b134cb6c72b3ca # Uncensored
         assign_scores_to:
           - name: Anime HD
-            score: 10
-            #score: 101
+          - name: Anime HD - Jap Only
+            #score: 10
+            score: 101
 
       # If you want to favor 10bit uncomment on of them the following two score lines
       - trash_ids:
           - b2550eb333d27b75833e25b8c2557b38 # 10bit
         assign_scores_to:
           - name: Anime HD
+          - name: Anime HD - Jap Only
             #score: 10
             #score: 101
 
@@ -95,4 +98,5 @@ sonarr:
           - 237eda4ef550a97da2c9d87b437e500b # German Microsized
         assign_scores_to:
           - name: Anime HD
+          - name: Anime HD - Jap Only
             score: 0
